# SetProgramOptions

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SetConfiguration.wpr  SetProgramOptions.wpr  exec-example-SetConfigurationCMake.py  exec-example-SetProgramOptions.py  exec-makedoc.sh  exec-reqs-install.sh  exec-reqs-uninstall.sh  exec-tests.sh  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: test-driver-core.yml
doc/source/: License.rst  SetConfigurationCMake.rst  SetProgramOptions.rst  SetProgramOptionsCMake.rst  conf.py  index.rst  tbl_setprogramoptions_commands.csv  tbl_setprogramoptionscmake_commands.csv
examples/: example-01.ini  example-01.py  example-02.ini  example-02.py  example-03.ini  example-03.py
setconfiguration/: SetConfigurationCMake.py  __init__.py  version.py
setconfiguration/unittests/: test_SetConfigurationCMake.py
setconfiguration/unittests/files_ini/: config_test_setconfigurationcmake.ini
setprogramoptions/: SetProgramOptions.py  SetProgramOptionsCMake.py  __init__.py  version.py
setprogramoptions/unittests/: common.py  test_SetProgramOptions.py  test_SetProgramOptionsCMake.py
setprogramoptions/unittests/files_ini/: config_test_setprogramoptions.ini
src/setprogramoptions/: SetProgramOptions.py  SetProgramOptionsCMake.py  __init__.py  common.py  version.py
src/setprogramoptions/unittests/: __init__.py  common.py  test_SetProgramOptions.py  test_SetProgramOptionsCMake.py
src/setprogramoptions/unittests/files_ini/: config_test_setprogramoptions.ini
